tolist() 동작 하지 않아 collect로 변경 합니다.